# avepay_mcf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
avepay_mcf/: certify.py  hooks.py  install.py  modules.txt  print_utils.py  setup.py
avepay_mcf/avepay_mcf/doctype/avepay_payment_mapping/: avepay_payment_mapping.json  avepay_payment_mapping.py
avepay_mcf/avepay_mcf/doctype/avepay_settings/: avepay_settings.js  avepay_settings.json  avepay_settings.py  test_avepay_settings.py
avepay_mcf/avepay_mcf/doctype/avepay_tax_mapping/: avepay_tax_mapping.json  avepay_tax_mapping.py
avepay_mcf/avepay_mcf/workspace/avepay_mcf/: avepay_mcf.json
avepay_mcf/fixtures/: custom_field.json  print_format.json  workspace.json
avepay_mcf/public/js/: avepay_settings.js
