# NB: nom de distribution pip distinct du SDK PyPI `avepay-mcf` (sinon collision :
# pip normalise avepay_mcf == avepay-mcf et refuse d'installer le SDK).
# Le module importable + le nom de l'app Frappe restent `avepay_mcf` (cf. [tool.flit.module]).
[project]
name = "frappe-avepay-mcf"
authors = [
    { name = "AvePay", email = "dev@avepay.net"}
]
description = "Certification fiscale MCF (DGI Burkina / SECEF) pour ERPNext"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dynamic = ["version"]
dependencies = [
    # frappe est fourni et géré par bench (ne pas l'épingler ici).
    "avepay-mcf>=0.1.0",  # SDK client MCF (PyPI) — installé automatiquement avec l'app.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Le module importable reste `avepay_mcf` même si la distribution s'appelle frappe-avepay-mcf.
[tool.flit.module]
name = "avepay_mcf"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# These apt dependencies will be installed from Ubuntu repositories when you host your app on Frappe Cloud
[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "UP030", # Use implicit references for positional format fields (translations)
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call (translations)
    "UP037", # quoted annotations
    "UP040", # Use type aliases instead of type annotations
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
